# SPDX-FileCopyrightText: 2025 Pablo V <noipy@pv8.dev>
#
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "noipy"
dynamic = ["version"]
description = "Command line tool for DDNS IP address updating."
readme = "README.md"
license = "Apache-2.0 AND CC-BY-SA-4.0 AND CC0-1.0"
license-files = ["LICENSES/*"]
authors = [
    {name = "Pablo V", email = "noipy@pv8.dev"}
]
requires-python = ">=3.9"
dependencies = [
    "requests>=2.32.4"
]
keywords = ["no-ip", "dyndns", "duckdns", "ddns", "api"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Internet :: Name Service (DNS)"
]

[project.optional-dependencies]
tests = [
    "tox>=4.7.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]
lint = [
    "flake8>=6.1.0",
]
typing = [
    "mypy>=1.0.0",
    "types-requests>=2.25.0",
]

[project.urls]
Repository = "https://github.com/pv8/noipy"
Changelog = "https://github.com/pv8/noipy/blob/main/CHANGELOG.md"
Issues = "https://github.com/pv8/noipy/issues"

[project.scripts]
noipy = "noipy.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["noipy*"]

[tool.setuptools.dynamic]
version = {attr = "noipy.__version__"}

[bdist_wheel]
universal = true

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if 0:",
    "if __name__ == .__main__.:",
]

[tool.mypy]
files = ["noipy/", "tests/"]
